--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -5,7 +5,7 @@ on:
     branches: [ "main" ]
   pull_request:
     branches: [ "main" ]
-  workflow_dispatch:  # 🔥 This adds manual run capability
+  workflow_dispatch:  # ✅ Manual trigger support
 
 jobs:
   terraform:
@@ -24,7 +24,7 @@ jobs:
     - name: Terraform Init
       run: terraform init
 
-    - name: Terraform Format
+    - name: Terraform Format Check
       run: terraform fmt -check
 
     - name: Terraform Validate
@@ -33,5 +33,10 @@ jobs:
     - name: Terraform Plan
       run: terraform plan
 
-    - name: Terraform Apply
+    - name: Terraform Apply (main branch only)
       if: github.ref == 'refs/heads/main'
+      run: terraform apply -auto-approve
+      env:
+        AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+        AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        AWS_DEFAULT_REGION: eu-west-1
